# pit

./: .gitignore  AGENTS.md  MVP_PROMPTS.md  PLAN.md  README.md  pit  pyproject.toml
.pit/: config.json
.pit/sessions/: 2026-05-03_3bf2256a.json  2026-05-03_7492b81c.json  2026-05-03_8f8a5a35.json  2026-05-06_0057a564.json  2026-05-06_69d76d3f.json  2026-05-06_6c1594b8.json
docs/: README.md  entrypoints.md  program-flow.md  src-pit-cli.md  src-pit-git.md  src-pit-paths.md  src-pit-prompts.md  src-pit-session.md  src-pit-state.md
src/pit/: __init__.py  __main__.py  cli.py  git.py  paths.py  prompts.py  session.py  state.py
testdata/: prompts.jsonl
testdata/codex_sessions/2026/05/03/: rollout-2026-05-03T10-00-00-00000000-0000-0000-0000-000000000001.jsonl  rollout-2026-05-03T11-00-00-00000000-0000-0000-0000-000000000002.jsonl
tests/: conftest.py  helpers.py  test_capture.py  test_codex_prompts.py  test_doctor.py  test_hooks.py  test_paths.py  test_prompts.py  test_state.py
